--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,10 +5,12 @@ jobs:
    runs-on: ubuntu-latest 
    steps: 
    - uses: actions/checkout@v1 
-   - name: Run make4ht 
-     uses: docker://ghcr.io/michal-h21/make4ht-action:latest 
-     env: 
-       command: 'make4ht -d out polyfaq.tex "mathml,mathjax" && bibtex polyfaq && make4ht -d out polyfaq.tex "mathml,mathjax"'
+   - name: install and run make4ht
+     run: |
+       sudo apt-get install texlive-extra-utils
+       make4ht -d out polyfaq.tex "mathml,mathjax"
+       bibtex polyfaq
+       make4ht -d out polyfaq.tex "mathml,mathjax"
    - name: Publish the web pages 
      uses:  peaceiris/actions-gh-pages@v3 
      with: 
