--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,6 +7,7 @@ jobs:
    - uses: actions/checkout@v1 
    - name: install and run make4ht
      run: |
+       sudo apt-get update
        sudo apt-get install texlive-extra-utils
        make4ht -d out polyfaq.tex "mathml,mathjax"
        bibtex polyfaq
