--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: CI
 on: [push] 
 jobs: 
   build: 
-   runs-on: ubuntu-latest 
+   runs-on: ubuntu-18.04
    steps: 
    - uses: actions/checkout@v1 
    - name: install and run make4ht
