--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,13 +2,13 @@ name: CI
 on: [push] 
 jobs: 
   build: 
-   runs-on: ubuntu-18.04
+   runs-on: ubuntu-latest
    steps: 
    - uses: actions/checkout@v1 
    - name: install and run make4ht
      run: |
        sudo apt-get update
-       sudo apt-get install texlive-extra-utils
+       sudo apt-get install texlive-extra-utils texlive-luatex
        make4ht -d out polyfaq.tex "mathml,mathjax"
        bibtex polyfaq
        make4ht -d out polyfaq.tex "mathml,mathjax"
