--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@ jobs:
    - name: install and run make4ht
      run: |
        sudo apt-get update -y
-       sudo apt-get install texlive-extra-utils texlive-luatex tex4ht -y
+       sudo apt-get install texlive-extra-utils texlive-luatex tex4ht texlive-latex-extra -y
        make4ht -d out polyfaq.tex "mathml,mathjax"
        bibtex polyfaq
        make4ht -d out polyfaq.tex "mathml,mathjax"
