--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,7 @@ jobs:
   build: 
    runs-on: ubuntu-latest
    steps: 
-   - uses: actions/checkout@v1 
+   - uses: actions/checkout@v2 
    - name: install and run make4ht
      run: |
        sudo apt-get update -y
@@ -12,8 +12,8 @@ jobs:
        make4ht -d out polyfaq.tex "mathml,mathjax"
        bibtex polyfaq
        make4ht -d out polyfaq.tex "mathml,mathjax"
-   - name: Publish the web pages 
-     uses:  peaceiris/actions-gh-pages@v3 
-     with: 
-       github_token: ${{ secrets.GITHUB_TOKEN }} 
-       publish_dir: ../out 
+   - name: Deploy
+     uses: JamesIves/github-pages-deploy-action@v4.2.2
+     with:
+       branch: main
+       folder: out
