--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,6 +12,8 @@ jobs:
        make4ht -d out polyfaq.tex "mathml,mathjax"
        bibtex polyfaq
        make4ht -d out polyfaq.tex "mathml,mathjax"
+       cd out
+       ln -s polyfaq.html index.html
    - name: Deploy
      uses: JamesIves/github-pages-deploy-action@v4.2.2
      with:
