use another branch for Pages

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,5 +17,5 @@ jobs:
    - name: Deploy
      uses: JamesIves/github-pages-deploy-action@v4.2.2
      with:
-       branch: main
+       branch: gh-pages
        folder: out
